# AlexNet-for-Parkinson-disease-detection-on-EEGs

./: .gitattributes  .gitignore  LICENSE  README.md  compare_filtering.py  data_set_preloader.py  dataset_preloader.py  eeg_and_tfr_plotter.py  main.py  pyproject.toml  tfr_plotter.py  train_and_validate.py  val_WST_tfr.pt  val_WST_tfr_rgb.pt
Data/iowa/: IowaData.mat  electrode_list.txt
Data/san_diego/: electrode_list.txt
Datasets_pt/: val_WST_tfr.pt  val_iowa.pt  val_sd.pt  val_sd_off.pt
support_func/: NN_classes.py  dataset_class.py  dataset_preloader.py  filters.py  import_data.py  model_processing.py  model_processing_iowa.py  wavelet_transform.py
